dnl Process this file with autoconf to produce a configure script.

dnl Args are: package name, version, bug report email
AC_PREREQ(2.59)
AC_INIT(SimpleMesh, 0.7, diachin2@llnl.gov)
AC_CONFIG_AUX_DIR(conf)

dnl TSTT_CONFIGURE_SERVER(IMPL_NAME, SERVER_LANG, TSTTM_BACKEND_DIR)
dnl Note that implementation-specific server stuff, other than factories, 
dnl must live in TSTT?_$(IMPL_NAME), and choose accordingly.  
dnl The SERVER_LANG argument must be one of C, C++, CXX, F77, F90, java,
dnl python. The C and Fortran variants are auto-promoted to upper case.
dnl Note also that there's room for future expansion by adding
dnl TSTTG_BACKEND_DIR, etc, at the end of the arg list. 
TSTT_CONFIGURE_SERVER(Simple, C, backend)

AC_OUTPUT
